# databricks-asset-bundles-demo

./: .gitignore  README.md  bundle.yml  pyproject.toml
10_ingestion/: sales_ingestion_dev.py  sales_ingestion_prod.py  sales_ingestion_stg.py
10_ingestion/data/stg/: sales.csv
20_bronze/: sales_bronze.py
30_silver/: sales_silver.py
40_gold/: sales_gold.py
50_tests/10_integration/: DLT-Pipeline-Test.py
50_tests/20_unit-notebooks/: test_column_helpers.py.py
azure_devops/: prod_deploy.yaml  unittest_and_staging_deploy.yaml
