[tool.poetry]
name = "databricks-asset-bundles"
version = "0.1.0"
description = "Demo of using Databricks Asset Bundles with DevOps"
authors = ["Oscar Dyremyhr <oscar.dyremyhr@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "library"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pyspark = "^3.3.1"
pytest-spark = "^0.6.0"
chispa = "^0.9.2"
nutter = "^0.1.34"
pytest-cov = "^4.0.0"
pytest = "^7.2.0"
urllib3 = "1.26.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
